--- a/style-2.css
+++ b/style-2.css
@@ -234,6 +234,7 @@ input:nth-child(1),input:nth-child(2) {
 	width:1190px;
 	margin:auto;
 }
+
 #product > div {
 	float:left;
 	padding-left:83px;
@@ -298,6 +299,11 @@ input:nth-child(1),input:nth-child(2) {
 	width:1205px;
 	margin:auto;
 	position:relative;
+}
+@media screen and (max-width: 1364px) {
+	#inner_scope {
+		width:976px;
+	}
 }
 #course_nav {
 	display:inline-block;
@@ -490,6 +496,11 @@ input:nth-child(1),input:nth-child(2) {
 	top:84px;
 	background-color:rgb(248,248,248);
 	box-sizing:border-box;
+}
+@media screen and (max-width: 1364px) {
+	#course_side {
+		left:738px;
+	}
 }
 #course_side>div:first-child {
 	font-size:20px;
