--- a/style-2.css
+++ b/style-2.css
@@ -286,7 +286,6 @@ input:nth-child(1),input:nth-child(2) {
 }
 #work img {
 	display:inline-block;
-	height:100%;
 	width:100%;
 	margin:auto;
 }
@@ -682,7 +681,7 @@ input:nth-child(1),input:nth-child(2) {
 #shade_video {
 	display: none;
 	position: fixed;
-	background-color:rgba(50,50,50,0.7);
+	background-color:rgba(0,0,0,0.7);
 	z-index: 999;
 	width:100%;
 	height:100%;
@@ -690,6 +689,16 @@ input:nth-child(1),input:nth-child(2) {
 	left:0px;
 	text-align: center;
 	vertical-align: middle;
+}
+.video_contain{
+	width:890px;
+	min-height:610px;
+	margin:0 auto;
+}
+.video_contain p{
+	float:left;
+	font-size:18px;
+	margin-bottom:22px;
 }
 #vid {
 	display: inline-block;
@@ -700,6 +709,12 @@ input:nth-child(1),input:nth-child(2) {
 	width:950px;
 	height:677px;
 	line-height: 100%;
+	padding-top:25px;
 	background-color:white;
-	outline:1px solid red;
+}
+#vid > img {
+	position:absolute;
+	top:14px;
+	right:12px;
+	cursor:pointer;
 }
